--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,26 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+#base Mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/controle_projetos?useSSL=false&allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=GMT
+spring.datasource.username=root
 spring.datasource.password=
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#SQL.
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+#logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
+
+
